--- a/part2/03_study-design.Rmd
+++ b/part2/03_study-design.Rmd
@@ -169,6 +169,9 @@ knitr::include_graphics("images/outcomes/Flow_MD.png")
 ### Data Processing Agreements
 When data processing is (partly) outsourced to a third party, a Data Processing Agreement (DPA) should be drafted, that specifies the agreements between the 'controller' and 'processor'. In this context, a controller is the person or organisation that determines the why and how of data collection (for example you as a researcher). The processor processes the data on behalf of the controller, for example by storing the data in a cloud. 
 Aspects of data processing that need to be adressed in the agreement are for example:
+
+Wie, niet delen anderen, data leaks rap., niet uitbesteden, log toegang binnen organisatie
+
 > Context, duration and termination of agreement
 > Processing data
 > Secure data storage
