--- a/part6/16_aph-catalogue.Rmd
+++ b/part6/16_aph-catalogue.Rmd
@@ -104,21 +104,20 @@ The Continuous Assessment for Suicide Prevention And Research (CASPAR) study (20
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
-| Project team   | Yvonne Goërtz, Melissa Thong, Daisy Janssen, Jeanette Peters, Jan Vercoulen, Chris Burtin, Yvonne Meertens-Kerris, Arnold Coors, Jean Muris, Emiel Wouters, Judith Prins, Mirjam Sprangers, Martijn Spruit |
+| Project team | Yvonne Goërtz, Melissa Thong, Daisy Janssen, Jeanette Peters, Jan Vercoulen, Chris Burtin, Yvonne Meertens-Kerris, Arnold Coors, Jean Muris, Emiel Wouters, Judith Prins, Mirjam Sprangers, Martijn Spruit |
 | APH site | AMC (in collaboration with Ciro-Horn, Maastricht UMC, Radboud UMC, Hasselt University) |
 | Full title | Fatigue in patients with chronic obstructive pulmonary disease: FAntasTIGUE study |
-| Topic | Smartphone data collection |
+| Topic | EMA |
 | Status | Ongoing, 2017-2020 |
-| Target population | Patients with clinically stable chronic obstructive pulmonary disease (proposed: n = 60) | 
-| Platform used| Psymate (https://psymate.eu) |
-| Study design | Longitudinal with 4 data collection periods (baseline, 4, 8, 12 months) |
-| EMA active | For each data collection period, participants are prompted 8 times a day at random moments between 7.30am and 22.30pm, for 5 consecutive days, to answer 19 items (including 9 contextual items). Measured concepts include fatigue, relaxed feeling, breathlessness, agitation, uncertainty, irritation, satisfaction, anxiety, feeling energetic, and feeling mentally fit. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. |
-| EMA passive | In conjunction with the self-reported questionnaire, patients are also asked to wear an actigraph (activity monitor) for 7 days, even during sleep. |
-| Data management | During the data collection period, patients are provided with iPods installed with the EMA application.|
-| Project goals | To capture possible diurnal fluctuations in fatigue.|
-| Results | Future results will guide the development of interventions for the management of fatigue in this patient group. |
-| Link to protocol paper | http://bmjopen.bmj.com/content/8/4/e021745.long |
-
+| Target population | Patients with clinically stable chronic obstructive pulmonary disease (proposed: n=60) |
+| Platform used | Psymate (https://psymate.eu) |
+| Study design | Longitudinal with 4 data collection periods (baseline, 4, 8, 12 months) |  
+| EMA active | For each data collection period, participants are prompted 8 times a day at random moments between 7.30am and 22.30pm, for 5 consecutive days, to answer 19 items (including 9 contextual items). Measured concepts include fatigue, relaxed feeling, breathlessness, agitation, uncertainty, irritation, satisfaction, anxiety, feeling energetic, and feeling mentally fit. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. In addition, participants are asked to complete a morning questionnaire soon after they are awake to assess the quality of their sleep the previous night. Participants also complete an evening questionnaire assessing the general perception of their day just before going to bed. During period of collecting self-reported data, patients are also asked to wear an actigraph (activity monitor) for 7 whole days, even during sleep. |
+| Data management | During the data collection period, patients are provided with iPods installed with the EMA application. |
+| Project goals | To capture possible diurnal fluctuations in fatigue. |
+| Results | Future results will guide the development of interventions for the management of fatigue in this patient group |
+| Lessons learned | |
+| Protocol paper| http://bmjopen.bmj.com/content/8/4/e021745.long |
 
 ### The GROUP project
 \index{GROUP}
@@ -164,7 +163,7 @@ purus nec, lobortis imperdiet diam.
 | APH site | VUmc, GGZ inGeest |
 | Full title | the Netherlands Study of Depression and Anxiety (NESDA), Wave 6 diary study |
 | Topic | Momentary assessment of people with depressive symptoms |
-| Status: 2015 - 2017 |
+| Status | Completed, 2015 - 2017 |
 | Target population | Selected sample of NESDA participants with symptoms of depression and healthy controls |
 | Platform used | RoQua (https://www.roqua.nl/) | 
 | EMA active | The self-report questionnaire contained 31 items. Items were rated on a 7-point Likert scale, ranging from 'not [at all]' to 'very'. Contructs of interest were: |
@@ -218,7 +217,9 @@ purus nec, lobortis imperdiet diam.
 | Status | Ongoing, XXX |
 | Target populations | Patients with major depressive disorder, epilepsy or multiple sclerosis (MS).|
 | Project goals | Examine how remote measurement technologies can monitor and improve quality of life and psychological well-being for people with depression, epilepsy, or multiple sclerosis. |
-| Technical goals | 1) Built an end-to-end system with generalized data aggregation capabilities. The platform focuses on classes of data rather than specific devices, in order to enhance modularity and adaptability as new devices become available. The platform is delivered under an Apache 2 open source license. 2) Big data solutions. |
+| Technical goals | 
+| |1) Built an end-to-end system with generalized data aggregation capabilities. The platform focuses on classes of data rather than specific devices, in order to enhance modularity and adaptability as new devices become available. The platform is delivered under an Apache 2 open source license. 
+| |2) Big data solutions. |
 | Clinical goals | 1) Continuous monitoring of patients, 2) predicting disease onset or relapse (prevention and risk assessment) |
 | EMA active | EMA questionnaires via pRMT application, which was built with Cordova. Outcomes include variability in sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of clinical course. |
 | EMA passive | 1) Location and movement (GPS) 2) Mood: voice recognition) 3) Social interaction (call and message logs), and 4) App interaction and app usage. 
@@ -255,7 +256,7 @@ purus nec, lobortis imperdiet diam.
 |:---------------|:-------------------------------------------------------------|
 | Project | Effect of virtual reality exposure therapy on social participation in people with a psychotic disorder (VRETp) |
 | Project team | Mark van der Gaag, PhD; Roos Pot-Kolder, MSc; Wim Veiling; Chris Geraets
-APH site: Vrije Universiteit Amsterdam, VUmc, UMC Groningen |
+| APH site | Vrije Universiteit Amsterdam, VUmc, UMC Groningen |
 | Status | Completed, 2013-2016 |
 | Target population | Patients (n = 116) with psychotic disorders who fear social situations.
 | Platform | PsyMate (http://www.psymate.eu/) |
@@ -284,7 +285,7 @@ APH site: Vrije Universiteit Amsterdam, VUmc, UMC Groningen |
 | Current VU-AMS projects | Validation of the Philips EmoGraphy technology to measure sympathetic nervous system activity in an ambulatory setting (van der Mee et al., ongoing, 2017 - 2021). |
 |EMA passive| Wearable, which measures combined skin conductance and heart rate variability. Information on current stress situation is presented as a Stress Level Score to the user, alongside a one-hour prediction of changes in stress level and cognitive functioning (Cognitive Zone changes). |
 | Results | The project aims to validate EmoGraphy by XXX (methods). The technology aims to "provide actionable insights that allow users to manage their emotional and physical stress so they can perform in the optimal cognitive zone in their daily activities" http://www.ip.philips.com/licensing/program/121. 
-| Lessons learned and advice for other researchers | XX |
+| Lessons learned  | XX |
 
 
 ### The IMPACT Onderzoek project
@@ -292,24 +293,18 @@ APH site: Vrije Universiteit Amsterdam, VUmc, UMC Groningen |
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
-| Project team | Iris Hartog, Tom Oreel, Pythia Nieuwkerk, Michael Scherer-Rath, José Henriques, Hanneke van Laarhoven, Mirjam Sprangers |
-|APH site | AMC, VUmc |
+| Project team | Iris Hartog, Justine Netjes (until 2017), Tom Oreel (since 2017), Pythia Nieuwkerk, Michael Scherer-Rath, José Henriques, Hanneke van Laarhoven, Mirjam Sprangers |
+|APH site | AMC |
 | Full title | Improving the conceptualisation and measurement of quality of life of patients with multiple chronic morbidities, exemplified by patients with cardiac disease undergoing cardiac intervention |
 | Topic | Smartphone data collection |
-| Status | Ongoing, 2016- |
-| Target population | Cardiac patients who underwent either angioplasty or bypass surgery (N= 37/320) |
+| Status | Ongoing, 2016-2010 |
+| Target population | Cardiac patients with comorbidities who were scheduled for elective percutaneous coronary intervention (PCI) or elective coronary artery bypass graft (CABG) (N= 37 EMA /320 total) |
 | Platform used |Psymate (https://psymate.eu)|
-| Study design | Longitudinal with 3 data collection periods (pre-treatment, within 2 weeks after treatment, 3-6 months post-treatment) |
-| EMA active | Participants are prompted to answer 9 general and 1 evening questionnaire per day for 7 consecutive days. During the day, patients are beeped randomly between 7.30 and 22.30 hours to complete the general questionnaire. The general questionnaire contains 19 items, including 5 contextual items. Concepts measured include agitation, relaxed feeling, anxiety, feeling down, feeling energetic, irritation, happiness, tiredness, worry, chest pain, other types of pain, shortness of breath, tightness in chest, feeling stuffy in the chest. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. Patents are asked to complete the evening questionnaire just before the go to bed. The evening questionnaire has a different set of questions including the QoL of that day, items from the EQ5, and the health status of that day. The last item is rated on a visual analogue scale from 0 (worst) to 100 (best).|
-| Data management | Participants are provided with iPods installed with the EMA application during data collection |
-| Project goals | The project aims to compare QoL collected retrospectively through paper surveys with that collected via EMA. Data collected through EMA can also inform possible changes in daily QoL, taking contextual situations into account. |
-| Statistical methods | R package used to conduct network analyses |
-| Results | Potential results can offer personalized assessments or advice to patients at risk of poorer QoL following cardia intervention. Prediction of |
-| Lessons learned | To maintain response during follow-ups, it is important to maintain contact with patients between follow-ups. The quality of EMA data can be low due to significant amount of missing data. Besides missing data, lack of variation in answers from day-to-day (through use of a Likert scale) could also be an issue. Both missing data and lack of variation can be a problem if planning to run network analyses. Due to the amount of data collected via EMA, data cleaning can take up a significant amount of time. |
-| website | http://www.impactonderzoek.nl/  |
-
-
-
-
-
-
+| Study design | Longitudinal with three EMA data collection periods (1. pre-treatment, 2. two weeks after treatment for PCI patients or 3 months post-treatment for CABG patients, and 3. six months post-treatment) |
+| EMA active | Participants are prompted to answer nine general and one evening questionnaire per day for seven consecutive days. During the day, patients are beeped randomly between 7.30 and 22.30 hours to complete the general questionnaire. The general questionnaire contains 19 items, including 5 contextual items. Concepts measured include: positive mood (feeling energetic, relaxed feeling, cheerfulness, happy), negative mood (anxiety, sadness, irritation, worry), coronary artery disease symptoms (chest pain, tightness in chest, oppressive feeling on the chest), and general symptoms (tiredness, other types of pain, shortness of breath). Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. Patients were asked to complete the evening questionnaire just before they went to bed. The evening questionnaire had, besides the general questionnaire, an additional set of questions from the EQ-5D, and the health state of that day. The last item is rated on a visual analogue scale from 0 (worst) to 100 (best).|
+| Data management | Participants were provided with iPods installed with the EMA application during data collection. Or if they preferred, could use their own device. |
+| Project goals | The project aims to get a better understanding of the moment-to-moment changes in quality of life and how this compares with changes found in retrospective QoL measurements. The project aims to compare QoL collected retrospectively through online or paper surveys with that collected via EMA. Data collected through EMA can also inform possible changes in daily QoL, taking contextual situations into account. |
+| Project goals | The project aims to compare QoL collected retrospectively through paper surveys with that collected via EMA. Data collected through EMA can also inform possible changes in daily QoL, taking contextual situations into account. Data will be analysed using vector autoregressive models using R|
+| Results | Work in progress, currently exploring the data using network analysis. 
+Lessons learned | To maintain response during follow-ups, it is important to maintain contact with patients between follow-ups. The development and testing of the app can take a significant amount of time, and during the study, updates of the smartphone operating system may lead to new bugs in the app. Due to the amount of data collected via EMA, data cleaning can take up a significant amount of time. The quality of EMA data can be low due to significant amount of missing data. Besides missing data, lack of variation in answers from day-to-day (through use of a Likert scale) could also be an issue. Possible solution is the use of continuous rating scales instead of 7-point Likert scales Both missing data and lack of variation can be a problem if planning to estimate vector autoregressive models.  |
+| Website | http://www.impactonderzoek.nl/  |
