--- a/part6/16_aph-catalogue.Rmd
+++ b/part6/16_aph-catalogue.Rmd
@@ -47,14 +47,13 @@ The Continuous Assessment for Suicide Prevention And Research (CASPAR) study (20
 | | (c) profile types of suicidal individuals. |
 | Results | An interactive safety plan that patients can access 24/7, increased disease awareness of patients due to self-monitoring, and input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalised interventions according to precision medicine principles, and more effective suicide prevention. |
 | Lessons learned | Constructing the right EMA items takes time. The constructs that you need to measure should be based on theory. Translate these concepts to momentary items in collaboration with EMA experts. Then test extensively among your target group|
-| Protocol paper | https://www.sciencedirect.com/science/article/pii/S2214782917301343 |
 | Website | https://www.zonmw.nl/nl/onderzoek-resultaten/kwaliteit-van-zorg/programmas/project-detail/suicidepreventie/continuous-assessment-for-suicide-prevention-and-research-caspar-smartphone-enabled-safety-pla/verslagen/ |
 
 
 ### Study on Chronic Fatigue Syndrome
 \index{Chronic Fatigue}
 
-The Study on Chronic Fatigue Syndrome (CFS) focusses on patients that are treated at the Expert Centre for Chronic Fatique (ECCF) and aims to examine determinants of chronic fatigue. Apart from studying determinants, the ECCF develops an applies interventions and examinens the mechanisms of change of evidence-based treatments for fatigue (http://nkcv.nl/onderzoek/expert-centre-chronic-fatigue/).
+The Study on Chronic Fatigue Syndrome (CFS) focusses on CFS patients that are treated at the Expert Centre for Chronic Fatique (ECCF). The study aims to examine determinants of chronic fatigue. 
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
@@ -76,7 +75,8 @@ The Study on Chronic Fatigue Syndrome (CFS) focusses on patients that are treate
 ### Moodbuster and E-COMPARED (EU)
 \index{Moodbuster and E-COMPARED}
 
-
+E-COMPARED is an European study (EU CIP), excecuted in nine countries, comparing the costs and effects of blended treatment (combined internet, mobile and face-to-face treatment) with  Cognitive Behavioural Therapy (CBT) in routine and specialised mental healthcare for depression. 
+Within the project, the Moodbuster application was used to gather EMA data on patient variables, such as depression and sleep. Patients were presented personalised reports on their mental and physical health over time [@Kleiboer2016]. 
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
@@ -88,15 +88,14 @@ The Study on Chronic Fatigue Syndrome (CFS) focusses on patients that are treate
 | Topic | Ecological Momentary Assessment alongside formal depression treatment |
 | Status | Data collection completed (2012 – 2018) |
 | Target population | Patients with Major Depressive Disorder in primary and specialized mental health care |
-| Platform used | Moodbuster (http://www.ict4depression.eu/moodbuster/). The platform is currently available in five languages: English, Dutch, German, Polish and French |
+| Platform used | Moodbuster [http://www.ict4depression.eu/moodbuster/]. The platform is currently available in five languages: English, Dutch, German, Polish and French |
 | Moodbuster | The original Moodbuster platform aimed to provide unguided self-help treatment to people with depressive symptoms. ICT4depression had 4 components: 1) physiological sensors aimed ad acceleration data and sympathetic nervous system responses (chest strap and glove), 2) a medication adherence monitor, 3) a website with treatment modules, automated feedback messages and tools (calendar, mood graph, sensor chart, ratings), and 4) Moodbuster (Android) app for access to treatment modules and mood ratings, location and activity tracking, and aggregation of physiological sensors |
 | E-COMPARED | Within the E-COMPARED study, the Moodbuster website and application were used. A therapist portal was added, in order to allow therapists to monitor patients’ progress and send feedback messages. |
-| EMI | The platform sent out automated reminders for scheduled activities within the modules and therapist appointments and tailored automated motivational text messages. The aim of EMI was to keep patients engaged with Moodbuster (rate mood and log in on platform). |
 | EMA active | Patients rated 7 items on a visual analogue scale (VAS), ranging from 0 (low) to 10 (high). Concepts that were measured, included: sleep, mood, worrying, self-esteem, activities (2 items) and social contacts. Items focused on current state, for example by asking “How is your mood right now”. 
+| EMI | The platform sent out automated reminders for scheduled activities within the modules and therapist appointments and tailored automated motivational text messages. The aim of EMI was to keep patients engaged with Moodbuster (rate mood and log in on platform). |
 | Data management | Patients and therapists accessed the platform with a personalized log-in. Mood was assessed daily at a random time point between 10:00 and 22:00. During the first and last 7 days of treatment, Sleep, Worrying and Self-esteem items were assessed in the morning (around 10:00). In the evening (around 22:00) these questions were repeated, along with the Activity and Social contact items. Patient data was stored on a server under a unique participant ID number. Patients with an iPhone were offered an android phone for the duration of EMA. |
-| Results | | 
-| Lessons learned | | 
-| Protocol paper | https://trialsjournal.biomedcentral.com/articles/10.1186/s13063-016-1511-1 |
+| Results | XXX | 
+| Lessons learned | XXX | 
 | Website |http://www.ict4depression.eu/ |
 | | http://www.ict4depression.eu/wp/wp-content/uploads/2011/03/FP7-248778-D4.7r1.pdf.|
 | | https://www.e-compared.eu/ |
@@ -105,7 +104,7 @@ The Study on Chronic Fatigue Syndrome (CFS) focusses on patients that are treate
 ### FAntasTIGUE
 \index{FAntasTIGUE}
 
-The FAntasTIGUE study aims to "chart the course of fatigue in patients with COPD, to identify the physical, systemic, psychological and behavioural factors that precipitate and perpetuate fatigue in patients with COPD, to evaluate the impact of exacerbation-related hospitalisations on fatigue and to better understand the association between fatigue and 2-year all-cause hospitalisation and mortality in patients with COPD" Within the FAntasTIGUE study, a secondary aim is to identify diurnal (happening during the day rather than at night) differences in fatigue by using EMA. 
+The FAntasTIGUE study examines fatigue in patients with COPD, by evaluating the course of fatigue, precipitating/perpetuating factors and hospitalisation. A secondary aim is to identify diurnal (happening during the day rather than at night) differences in fatigue by using EMA [@Goertz2018]. 
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
@@ -122,7 +121,6 @@ The FAntasTIGUE study aims to "chart the course of fatigue in patients with COPD
 | Project goals | To capture possible diurnal fluctuations in fatigue. |
 | Results | Future results will guide the development of interventions for the management of fatigue in this patient group |
 | Lessons learned | |
-| Protocol paper| http://bmjopen.bmj.com/content/8/4/e021745.long |
 
 ### MERITS (approval summary 12-03-2018)
 
@@ -148,14 +146,14 @@ The main aim of NESDA (the Netherlands study of Anxiety and Depression) is to ex
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
-| Project team | Femke Lamers, Phd |
+| Project team | Femke Lamers, PhD, Brenda Penninx, PhD |
 | APH site | VUmc, GGZ inGeest |
 | Full title | the Netherlands Study of Depression and Anxiety (NESDA), Wave 6 diary study |
 | Topic | Momentary assessment of people with depressive symptoms |
 | Status | Completed, 2015 - 2017 |
 | Target population | Selected sample of NESDA participants with symptoms of depression and healthy controls |
-| Platform used | RoQua (https://www.roqua.nl/), prompts consisted of a SMS, which contained a link to the EMA questions | 
-| EMA active | The self-report questionnaire contained circa 35 items. Items were rated on a 7-point Likert scale, ranging from 'not [at all]' to 'very'. Participants were prompted five times a day, for two weeks. Contructs of interest were 1) valance (unpleasant to pleasant) and arousal (calm to excited), 2) current state, symptoms of depression/anxiety, physical condition, 3) social context, 4) sleep, 5) daily uplifts/hassels, 6) activities, and 7) substance use. Examples of items were: "I feel down", "I feel cheerful" and "Where are you now" (e.g. at the neighbour's house). In addition, there was an addendum questionnaire with one item inquiring about questionnaire burden and an open ended question for general comments on circumstances that might influence answers. 
+| Platform used | RoQua (https://www.roqua.nl/). Participants were prompted with a SMS, which contained a link to the EMA questions | 
+| EMA active | The self-report questionnaire contained circa 31 items. Items were rated on a 7-point Likert scale, ranging from 'not [at all]' to 'very'. Participants were prompted five times a day, for two weeks. Contructs of interest were 1) valance (unpleasant to pleasant) and arousal (calm to excited), 2) current state, symptoms of depression/anxiety, physical condition, 3) social context, 4) sleep, 5) daily uplifts/hassels, 6) activities, and 7) substance use. Examples of items were: "I feel down", "I feel cheerful" and "Where are you now" (e.g. at the neighbour's house). In addition, there was an addendum questionnaire with one item inquiring about questionnaire burden and an open ended question for general comments on circumstances that might influence answers. 
 | Origin of items | The items on valance, arousal and current state have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are inspired on earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015) |
 | Data management | EMA started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone if they had sufficient data, or access to WiFi for at least 80% of the two-week time period. If participants did not have a smartphone, they could borrow one. Patients were briefed on the EMA study during a face-to-face session with a research assistant (following standard NESDA data 9-year follow-up assessment). Participants were asked to fill in the questionnaire within 15 minutes after the SMS. After 30 minutes a reminder was sent, and after 60 minutes the link would become inactive. Participants needed to answer all questions before the questionnaire could be send to the secured server. Participants received personalised mood fluctiuation reports, in order to motivate them to adhere to EMA. Reports were sent via e-mail in a password protected document. During data collection, patients were contacted by a research assistant after 24 hours and 7 days in order to enquire whether problems had occurred with EMA. Research assistants actively monitored data collection and contacted participants if they missed three consecutive questionnaires. Data were stored in a secured web-environment of the University Medical Centre Groningen (UMCG) |
 | EMA passive | In order to record the amount of physical activity during EMA monitoring, participants were asked to wear an accelerometer (GENEActiv) on their non-dominant wrist 24 hours a day for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment. After data collection, participants mailed their watch to the research center. Data was extracted via a USB with GENEActiv software. |
@@ -167,7 +165,7 @@ The main aim of NESDA (the Netherlands study of Anxiety and Depression) is to ex
 ### The Psycho-systems group
 \index{Psycho-Systems}
 
-The Psycho-systems group is an UvA based initiative led by Prof. Dr. Denny Borsboom, focusing on "the development of new methodologies for psychological research using complex systems theory and network models" (http://psychosystems.org/). 
+The Psycho-systems group is an UvA based initiative, led by Prof. Dr. Denny Borsboom, focusing on "the development of new methodologies for psychological research using complex systems theory and network models" (http://psychosystems.org/). 
 
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
@@ -188,27 +186,28 @@ ut massa tempor, ac dapibus dui viverra |
 ### Project RADAR-CNS (EU)
 \index{RADAR-CNS}
 
+The European (EU H2020-IMI) RADAR-CNS project (Remote Assessment of Disease and Relapse - Central Nervous System) aims to study the potential of wearable devices and smartphone technology to help prevent and treat depression, multiple sclerosis and epilepsy (https://www.radar-cns.org/). The Dutch research site (VUmc/GGZ inGeest) will focus on depression. 
+
 | Aspect         | Description                                                  | 
 |:---------------|:-------------------------------------------------------------|
-| Dutch project team| XXX |
+| Dutch project team| Femke Lamers, PhD, Brenda Penninx, PhD, Sonia Difrancesco  |
 | APH site | VUmc, GGZ inGeest |
 | Context | The project is jointly led by King's College London and Janssen Pharmaceutica NV. The project is funded by the Innovative Medicines Initiative, a Public Private Partnership set up between the European Federation of Pharmaceutical Industries and Associations (EFPIA) and the European Union). It includes 23 organizations from across Europe and the US. |
 | Full title | RADAR-CNS: Remote Assessment of Disease and Relapse - Central Nervous System |
 | Topic | Wearable devices to help prevent and treat depression, multiple sclerosis and epilepsy |
-| Status | Ongoing, XXX |
+| Status | Ongoing, 2016 |
 | Target populations | Patients with major depressive disorder, epilepsy or multiple sclerosis (MS) |
+| Platform | RMT application (http://thehyve.nl/cases/radar-cns/) |
 | Project goals | Examine how remote measurement technologies can monitor and improve quality of life and psychological well-being for people with depression, epilepsy, or multiple sclerosis |
-| Technical goals | 
-| |1) Built an end-to-end system with generalized data aggregation capabilities. The platform focuses on classes of data rather than specific devices, in order to enhance modularity and adaptability as new devices become available. The platform is delivered under an Apache 2 open source license
-| |2) Big data solutions. |
+| Technical goals | 1) Build an end-to-end system with generalized data aggregation capabilities. The platform focuses on classes of data rather than specific devices, in order to enhance modularity and adaptability as new devices become available. The platform is delivered under an Apache 2 open source license, 2) Big data solutions. |
 | Clinical goals | 1) Continuous monitoring of patients, 2) predicting disease onset or relapse (prevention and risk assessment) |
-| EMA active | EMA questionnaires via pRMT application, which was built with Cordova. Outcomes include variability in sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of clinical course. |
-| EMA passive | 1) Location and movement (GPS) 2) Mood: voice recognition) 3) Social interaction (call and message logs), and 4) App interaction and app usage. 
+| EMA active | aRMT application: Outcomes include variability in sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of clinical course. |
+| EMA passive | pRMT application: 1) Location and movement (GPS) 2) Mood: voice recognition) 3) Social interaction (call and message logs), and 4) App interaction and app usage. 
 | Wearables | Skin temperature, heart rate (-variability), actigraphy (3-axis accelerometer, gyroscope), galvanic skin conductance (Empatica E4 Wristband, Pebble 2 Smartwatch, Biovotion VSM, Faros 180, and Fitbit devices). In the depression study a Fitbit will be used to measure sleep and activity. | 
 | Data management | Participants are requested to install three apps on their Android smartphone. Data is collected during a 2-year period. Active EMA will be activated every 6 weeks for 6 consecutive days. Four times per year a non-EMA follow-up is conducted, which contains (qualitative) interviews and self-report questionnaires. Log in is facilitated with token-based authentication and authorization. A dashboard app allows for live monitoring of results. Data is streamed and analysed live. |
 | Results | GGZ inGeest will participate in the depression study as a research site. Data will be used to assess a variety of research questions, concerning topics such as MDD subtypes, seasonal depression and predicting relapse |
-| Lessons learned | When measuring over such a long time span, extra attention should be paid to the possible burden for participants. Continuous monitoring via a Smartphone can severely impact battery life |
-
+| Lessons learned | When measuring over such a long time span, extra attention should be paid to the possible burden for participants. Continuous monitoring via a Smartphone can severely impact battery life. Participants prefer consumer devices (such as FitBit) rather than research devices (such as GenActiv), because of stigma. Carrying a research device will prompt questions. |
+| More information | https://www.ecsel.eu/sites/default/files/2017-11/thehyve_vanbochove_-_session3_-_july_5_ecsel_imi_workshop.pdf |
 
 ### TemStem (approval 08-03-2018)
 \index{TEMSTEM}
@@ -221,14 +220,14 @@ ut massa tempor, ac dapibus dui viverra |
 | APH site | Vrije Universiteit Amsterdam, VUmc, GGZ inGeest, Parnassia Psychiatric Institute
 | Status | Ongoing, March 2016- July 2018 |
 | Target population | People who suffer from hearing voices and are obstructed by them in their daily life |
-| Platform used | Temstem application. Developed by Reframing Studio, in collaboration with Parnassia Psychiatric Institute and TU Delft |
+| Platform | Temstem application. Developed by Reframing Studio, in collaboration with Parnassia Psychiatric Institute and TU Delft. Available for IOS and Android |
 | EMI | Mobile application (Temstem) focuses on reducing distress and dysfunction caused by auditory verbal hallucinations (AVH). Components:  1) coping: addressing verbal working memory phonological loop with a language task, thereby blocking the hearing of voices, 2) positive reinforcement: decreasing self-reported negative self-esteem themes, 3) treatment: reducing emotional response to memories associated with voices by taxing the auditory working memory during recall of negative auditory memories (as in EMDR therapy).
-| EMA | Users are encouraged to fill-in 9 self-report items on a daily basis. 
-| Outcomes | 1) hearing voices: 6 items (e.g. "Today, the voices were disturbing"), 2) mood: 1 item ("I felt depressed"), 3) self-esteem: 1 item ("I was satisfied about myself"), 4) the use of Temstem ("I used Temstem today"). Items are rated on a 7-point Likert-scale. Items are based on existing EMA questionnaires. Results are presented to users in separate graphs, in order to support users in gaining insight in the pattern of AVH over time, or after use of Temstem. |
+| EMA active | Users are encouraged to fill-in 9 self-report items on a daily basis. Outcomes include: 1) hearing voices: 6 items (e.g. "Today, the voices were disturbing"), 2) mood, 3) self-esteem, 4) the use of Temstem ("I used Temstem today"). Items are rated on a 7-point Likert-scale. Items are based on existing EMA questionnaires. Results are presented to users in separate graphs, in order to support users in gaining insight in the pattern of AVH over time, or after use of Temstem. |
 | Project goals | Examine the effect of the app on distress and dysfunction in a RCT. Investigate the effect of Temstem on frequency and severity of AVH, to determine working mechanisms, to identify predictors and mediators of effects, and to test the usability of Temstem. |
 | Results | Reduce distress and dysfunction caused by auditory verbal hallucinations |
 | Data management| Data is stored on a server hosted by Service Heroes (via Reframing Studio), under users' unique download numbers. Stored variables include, among others, scores of vividness of AVH pre and post use of Temstem, data on application use (duration), used function (e.g. 'Silencing' function which focuses on coping, or 'Challenging' function which is based on dual tasking), and how users feel when they hear voices. Users can choose to provide additional information on age, gender, which county in the Netherlands they are currently located, how they found the app, and why they want to use it (e.g. because they hear voices, because they are a clinician and they want to learn more about the app to support clients, etc.). Clinicians cannot access user data or graphs. Researchers can, but only in big data files. To see users' personal data (e.g. how many times they used the app, how vivid the voices were before and after the use of Temstem, etc.) researchers need the users' unique download number. |
 | Lessons learned | Users need internet to use the app, because it works on an online platform. However, not all our users have wireless internet. If we had known this in time, we would have chosen to run it offline. Other lessons we have learned are that you have to resolve bugs as soon as possible, because otherwise it may take a long time before it is fixed. Be very explicit in what you want and expect from the app developers, even when you think that it is quite logic and clear. |
+| Website | https://www.parnassiagroep.nl/hoe-wij-helpen/online-hulp/temstem |
 
 
 ### VRETp trial (approval 02-03-2018)
